<resources>
    <string name="app_name">BookSeat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_login"> it\'s never too late to book your seat </string>
    <string name="btn_text_google">log in using google</string>
    <string name="title_profile">Hi, %s </string>
    <string name="subtitle_profile">What do you want to do today?</string>
    <string name="btn_text_new_reservation">make new reservation</string>
    <string name="btn_text_manage_reservation">manage your reservation</string>
    <!--<string name="webclient_id" translatable="false">464596255778-bissprkc6hc1gfoqudbtfrhe8um73ri8.apps.googleusercontent.com</string>-->
    <string name="webclient_id" translatable="false">464596255778-5evccir73bm8hdjdr9osiv6nib3qn5f0.apps.googleusercontent.com</string>
    <string name="title_new_reservation">Make you choice!</string>
    <string name="morning_reservation">morning (9–13)</string>
    <string name="afternoon_reservation">afternoon (14–18)</string>
    <string name="allday_reservation">all day (9-13/14-18)</string>
    <string name="btn_back">back</string>
    <string name="btn_next">next</string>
    <string name="afternoon_text">afternoon:</string>
    <string name="morning_text">morning:</string>
    <string name="chair_aftr">afternoon chair:</string>
    <string name="chair_morn">morning chair:</string>
    <string name="room">room:</string>
    <string name="title_period">Room situation </string>
    <string name="free_desk">Free desk:</string>
    <string name="busy_desk">Busy desk:</string>
    <string name="free_desk_color">Green</string>
    <string name="busy_desk_color">Red</string>
</resources>